<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_sl"
    tools:context="teamtriplej.com.lipidlator21.Sphingolipids_Activity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="209dp"
            android:layout_height="63dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:text="@string/SLConfiguration"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:id="@+id/scroll_view"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvIon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Ion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" />

        <Spinner
            android:id="@+id/spnIon"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="12dp"
            android:entries="@array/ion_array"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIon" />

        <TextView
            android:id="@+id/tvHeadGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:text="@string/HeadGroup"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnIon" />

    <Spinner
        android:id="@+id/spnHeadGroup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:entries="@array/sph_headgroup_array_values"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadGroup" />


    <TextView
        android:id="@+id/tvSphingoidBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/SphingoidBase"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnHeadGroup"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnSphingoidBase"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:entries="@array/sphingoid_array_values"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSphingoidBase" />

    <TextView
        android:id="@+id/tvNAcyl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/NAcyl"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSphingoidBase"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnNAcyl"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="30dp"
        android:entries="@array/n_acyl_array_values"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNAcyl" />
            </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:background="@color/SL"
        android:text="@string/Back"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:background="@color/SL"
        android:text="@string/Submit"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
